--- a/semitec/src/app/components/Keyboard.module.css
+++ b/semitec/src/app/components/Keyboard.module.css
@@ -13,7 +13,42 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
+  border-radius: 5px;
   font-size: 65px;
+}
+.keyboardContainer {
+  width: 1500px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid black;
+
+}
+.functionKeys {
+  border: 2px solid black; 
+  display: flex;
+}
+.alphaKeys{
+  border: 2px solid black; 
+}
+.control {
+  margin: 0 0 0 20px;
+  border: 2px solid black; 
+}
+
+/* key colors */
+.thumb, .index {
+  background-color: #1A000000;
+}
+
+.middle {
+  background-color: #00E700;
+}
+
+.ring {
+  background-color: #489EF2;
+}
+
+.pinky {
+  background-color: #FDC900;
 }
