feat: adding lesson word and typed word overflow and direction

--- a/semitec/src/app/guest/lessons/[lesson]/Lesson.module.css
+++ b/semitec/src/app/guest/lessons/[lesson]/Lesson.module.css
@@ -1,10 +1,33 @@
 .text {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  overflow: hidden;
   letter-spacing: 0.7vw;
   margin: 0 auto;
-  width: 600px;
-  font-size: 6vw;
+  font-size: 7vw;
+}
+
+.done {
+  direction: rtl;
+  white-space: nowrap;
+  overflow: hidden;
+  text-align: right;
+  display: inline;
+  width: 48vw;
+  margin-right: auto; /* Empujar el span "done" hacia la izquierda */
+}
+
+.next {
+  white-space: nowrap;
+  text-align: left;
+  overflow: hidden;
+  width: 48vw;
+  margin-left: auto; /* Empujar el span "next" hacia la derecha */
 }
 .current {
+  width: 4vw;
+  margin: 0 auto;
   background-color: #007172;
   color: #ffff;
 }
@@ -13,9 +36,12 @@
 }
 .container {
   justify-content: center;
-  height: 100hv;
+  width: 100vw;
+  height: 90vh;
 }
 .typingArea {
+  display: flex;
+  overflow: hidden;
   letter-spacing: 0.7vw;
   min-height: 5vw;
   margin: 20px 16px;
@@ -23,4 +49,11 @@
   font-size: 5vw;
   border: solid #e6e6e6 2px;
   border-radius: 3px;
+}
+.typed {
+  direction: rtl;
+  overflow: hidden;
+  text-align: right;
+  white-space: nowrap;
+  width: 48vw;
 }
