--- a/semitec/src/app/login/Login.css
+++ b/semitec/src/app/login/Login.css
@@ -3,12 +3,27 @@
     flex-wrap: nowrap;
 }
 
-.logo-size {
+body {
+    margin: 0;
+}
+
+.logo-img{
     display: inherit;
-    padding: 0 25%;
-    height: auto;
+    background-image: url('../../assets/Semitec_logoSuite/semitec_logo_300px_color.png');
+    background-size: contain;
+    width: 100%;
+    height: 180px;
+    flex-grow: 4;
+    background-repeat: no-repeat;
+    margin: 30% 0 5% 25%;
+}
+
+.login-right-side{
+    display: inherit;
+    flex-wrap: wrap;
+    width: 100%;
     align-self: center;
-    width: 50%;
+    justify-content: center;
 }
 
 .bg-size {
@@ -17,6 +32,7 @@
     height: 100vh;
     background-image: url('../../assets/bg_images/login_bg.png');
     background-size: 100% 100%;
+    align-content: space-between;
 }
 
 .login-size{
@@ -24,19 +40,18 @@
     width: 40%;
     flex-wrap: wrap;
     justify-content: center;
-    height: auto;
-}
-
-p, text {
-    font-family: Atkinson_Hyperlegible;
+    align-content: flex-start;
 }
 
 .login-header {
     display: inherit;
     flex-wrap: wrap;
-    font-size: 175%;
+    justify-content: center;
+    align-self: flex-end;
+    font-size: 30px;
     font-weight: bolder;
-    padding: 0 30%;
+    width: 100%;
+    padding-bottom: 5%;
 }
 
 .login-text {
