--- a/semitec/src/app/login/Login.css
+++ b/semitec/src/app/login/Login.css
@@ -7,6 +7,39 @@ body {
     margin: 0;
 }
 
+a {
+    color: #025259;
+    align-self: center;
+  }
+
+.anchor-and-text-container{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.anchor-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.reg-text{
+    display: inherit;
+    flex-wrap: nowrap;
+    font-size: 0.9vw;
+    font-weight: 100;
+}
+
+.details-container{
+    display: inherit;
+    flex-wrap: wrap;
+    height: fit-content;
+    align-content: center;
+    margin-top: 25%;
+    margin-left: 10%;
+}
+
 .logo-img{
     display: inherit;
     background-image: url('../../assets/Semitec_logoSuite/semitec_logo_300px_color.png');
@@ -15,7 +48,30 @@ body {
     height: 180px;
     flex-grow: 4;
     background-repeat: no-repeat;
-    margin: 30% 0 5% 25%;
+    margin: 25% 25% 5% 25%;
+}
+
+.login-left-side-header{
+    display: inherit;
+    color: white;
+    font-size: 48px;
+    font-weight: bold;
+    width: 100%;
+    align-content: center;
+    height: auto;
+}
+
+.login-left-side-text{
+    display: inherit;
+    color: white;
+    font-size: 38px;
+    width: 100%;
+    align-content: center;
+    height: auto;
+}
+
+.error-message{
+    color: #D94F04;
 }
 
 .login-right-side{
@@ -37,6 +93,7 @@ body {
 
 .login-size{
     display: inherit;
+    height: 50vh;
     width: 40%;
     flex-wrap: wrap;
     justify-content: center;
