--- a/semitec/src/app/_styles/Containers.module.css
+++ b/semitec/src/app/_styles/Containers.module.css
@@ -13,3 +13,9 @@
     border-radius: 10px;
     border: solid 1px #e6e6e6;
 }
+
+.alignLeft {
+    margin-top: 4vw;
+    width: 100%;
+    text-align: right;
+}
