--- a/semitec/src/app/components/profile-data.css
+++ b/semitec/src/app/components/profile-data.css
@@ -6,6 +6,9 @@
 }
 
 .data-container{
+    position: relative;
+    z-index: 1;
+    top: -100px;
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(0, 0, 0, 0.08); 
@@ -23,7 +26,7 @@
 .header-format{
     display: flex;
     flex-wrap: wrap;
-    padding-top: 5%;
+    padding-top: 18%;
     padding-bottom: 5%;
     width: 100%;
 }
@@ -65,6 +68,19 @@
     flex-wrap: wrap;
     width: 100%;
     font-size: 2.5vh;
+}
+
+.icon{
+    position: relative;
+    z-index: 2;
+    left:45%;
+    top: 50px;
+    background-color: grey;
+    background-image: url("../../assets/bg_images/avataricon.png");
+    border-radius: 100px;
+    height: 20vh;
+    width: 20vh;
+    background-size: contain;
 }
 
 .error{
