--- a/semitec/src/app/components/profile-data.css
+++ b/semitec/src/app/components/profile-data.css
@@ -19,14 +19,15 @@
     font-size: 16px;
     width: 25%;
     border-radius: 25px;
-    height: min-content;
+    height:fit-content;
     margin: 5%;
+    padding-bottom: 2%;
 }
 
 .header-format{
     display: flex;
     flex-wrap: wrap;
-    padding-top: 18%;
+    padding-top: 15%;
     padding-bottom: 5%;
     width: 100%;
 }
@@ -41,12 +42,16 @@
 
 .name-format{
     display: inherit;
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 5vh;
     width: 100%;
     justify-content: center;
 }
 
+.empty-space{
+    width: 100%;
+    height: 20%;
+}
 .institution-format{
     display: inherit;
     font-weight: normal;
@@ -68,6 +73,35 @@
     flex-wrap: wrap;
     width: 100%;
     font-size: 2.5vh;
+}
+
+.type-icon{
+    background-image: url("../../assets/bg_images/briefcasetype.png");
+    height:4vh;
+    width:5vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.email-icon{
+    background-image: url("../../assets/bg_images/Vectoremail.png");
+    height:4vh;
+    width:4vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.location-icon{
+    background-image: url("../../assets/bg_images/geo-altlocation.png");
+    height:4vh;
+    width:4vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.body-line{
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .icon{
