--- a/semitec/src/app/_styles/Button.module.css
+++ b/semitec/src/app/_styles/Button.module.css
@@ -6,3 +6,12 @@
     font-size: 20px;
     border-radius: 4px;
 }
+
+.secondary{
+    background-color: #676767;
+    border: 0px;
+    color: white;
+    padding: 10px 30px;
+    font-size: 20px;
+    border-radius: 4px;
+}
