feat: finishing welcome page

--- a/semitec/src/app/_styles/GroupsTable.module.css
+++ b/semitec/src/app/_styles/GroupsTable.module.css
@@ -10,6 +10,11 @@
 
 .container thead {
     border-bottom: 2px solid black;
+    font-size: 1.3vw;
+}
+
+.container tbody {
+    font-size: 1.2vw;
 }
 .container th, .container td {
     text-align:left;
