--- a/semitec/src/app/components/button/button.css
+++ b/semitec/src/app/components/button/button.css
@@ -3,14 +3,15 @@
     background-color: #F29325; 
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 15px;
     text-align: center;
     text-decoration: none;
     font-size: 20px;
-    width: 100%;
+    width: 200px;
     border-radius: 5px;
     height: min-content;
     margin: 5%;
+    justify-content: center;
   }
 
 .button:hover {
@@ -34,4 +35,9 @@
 
 .anchor-button:hover {
   background-color: #D94F04;
+}
+
+.button-wrap{
+  display: flex;
+  justify-content: center;
 }
