--- a/semitec/src/app/signup/Signup.css
+++ b/semitec/src/app/signup/Signup.css
@@ -44,11 +44,11 @@ body {
     flex-grow: 4;
     background-repeat: no-repeat;
     margin-top: 30%;
-    margin-left: 25%;
+    margin-left: 11%;
 }
 
 .signup-header {
-    display: inherit;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-self: flex-end;
@@ -56,6 +56,7 @@ body {
     font-weight: bolder;
     width: 100%;
     padding-bottom: 5%;
+    padding-top: 5%;
 }
 
 .signup{
@@ -134,3 +135,14 @@ body {
   .final-anchor-button:hover {
     background-color: #D94F04;
   }
+
+  .form-styling{
+    width: 100%;
+    font-size: 1.3vw;
+}
+
+.login-text {
+    display: inherit;
+    font-size: 1.3vw;
+    font-weight: 100;
+}
