--- a/semitec/src/app/components/profile-data.css
+++ b/semitec/src/app/components/profile-data.css
@@ -1,14 +1,11 @@
 .flex-container{
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
     width: 100%;
-    justify-content: center;
+    margin: 0 auto 15vh;
 }
 
 .data-container{
     position: relative;
-    z-index: 1;
-    top: -100px;
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(0, 0, 0, 0.08); 
@@ -17,10 +14,9 @@
     padding: 15px 32px;
     text-align: left;
     font-size: 16px;
-    width: 25%;
+    width: 25vw;
     border-radius: 25px;
-    height:fit-content;
-    margin: 5%;
+    margin: 0 auto;
     padding-bottom: 2%;
 }
 
@@ -28,14 +24,6 @@
     display: flex;
     flex-wrap: wrap;
     padding-top: 15%;
-    padding-bottom: 5%;
-    width: 100%;
-}
-
-.body-format{
-    display: flex;
-    flex-wrap: wrap;
-    display: inherit;
     padding-bottom: 5%;
     width: 100%;
 }
@@ -69,16 +57,16 @@
 }
 
 .data{
-    display: inherit;
     flex-wrap: wrap;
     width: 100%;
     font-size: 2.5vh;
+    margin-left: 1.2vw;
 }
 
 .type-icon{
     background-image: url("../../assets/bg_images/briefcasetype.png");
     height:4vh;
-    width:5vh;
+    width:4vh;
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -101,13 +89,14 @@
 
 .body-line{
     display: flex;
-    flex-wrap: nowrap;
+    align-items: center;
+    margin: 10px 0 10px 0;
 }
 
 .icon{
     position: relative;
     z-index: 2;
-    left:45%;
+    margin: 0 auto;
     top: 50px;
     background-color: grey;
     background-image: url("../../assets/bg_images/avataricon.png");
