--- a/semitec/src/app/_styles/Button.module.css
+++ b/semitec/src/app/_styles/Button.module.css
@@ -1,17 +1,18 @@
 .primary {
-    background-color: #F29325;
-    border: 0px;
-    color: white;
-    padding: 10px 30px;
-    font-size: 20px;
-    border-radius: 4px;
+  background-color: #f29325;
+  border: 0px;
+  color: white;
+  padding: 10px 30px;
+  font-size: 1.2vw;
+  border-radius: 4px;
+  height: 5vh;
 }
 
-.secondary{
-    background-color: #676767;
-    border: 0px;
-    color: white;
-    padding: 10px 30px;
-    font-size: 20px;
-    border-radius: 4px;
+.secondary {
+  background-color: #676767;
+  border: 0px;
+  color: white;
+  padding: 10px 30px;
+  font-size: 20px;
+  border-radius: 4px;
 }
