--- a/semitec/src/app/components/LessonInfo.module.css
+++ b/semitec/src/app/components/LessonInfo.module.css
@@ -13,7 +13,14 @@
     text-align: center;
 }
 
-.wrapper {
-    width: 100%;
-    margin-bottom: 2vw;
+.wrapper h1 {
+    font-size: 2.1vw;
+}
+
+.wrapper h2 {
+    font-size: 1.5vw;
+}
+
+.wrapper p {
+    font-size: 1.3vw;
 }
