fix: fixing constrast and welcome styles

--- a/semitec/src/app/_styles/Button.module.css
+++ b/semitec/src/app/_styles/Button.module.css
@@ -1,7 +1,7 @@
 .primary {
-  background-color: #f29325;
+  background-color: #824C0F;
   border: 0px;
-  color: white;
+  color: #ffffff;
   padding: 10px 30px;
   font-size: 1.2vw;
   border-radius: 4px;
