--- a/semitec/src/app/components/LessonInfo.module.css
+++ b/semitec/src/app/components/LessonInfo.module.css
@@ -1,5 +1,5 @@
 .startButton {
-    background-color: #F29325;
+    background-color: #824C0F;
     border: 0px;
     color: white;
     padding: 10px 30px;
