--- a/semitec/src/app/components/button/button.css
+++ b/semitec/src/app/components/button/button.css
@@ -1,6 +1,6 @@
 .button {
     display: flex;
-    background-color: #F29325; 
+    background-color: #A16015; 
     border: none;
     color: white;
     padding: 15px;
