--- a/semitec/src/app/_styles/WelcomeCard.module.css
+++ b/semitec/src/app/_styles/WelcomeCard.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: #ebebeb;
     border-radius: 25px;
-    padding: 10px;
+    padding-left: 30px;
 }
 
 .name {
