--- a/semitec/src/app/_styles/About.module.css
+++ b/semitec/src/app/_styles/About.module.css
@@ -1,13 +1,11 @@
-.containerParagraph{
-    padding: 20px;
-    margin-left: 10vw;
-    width: 80vw ;
+.containerParagraph {
+    width: 100%;
     font-size: 1.4vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
 .containerTitle{
-    padding-top: 20px;
-    padding-left: 20px;
-    margin-left: 5.5vw;
     padding-bottom: 2px;
     font-size: 1.5vw;
     border-bottom: solid 15px #007172;
@@ -17,4 +15,57 @@
     text-align: right;
     margin-right: 4.8vw;
     margin-bottom: 1vw;
+}
+
+.rightContainer, .leftContainer {
+    padding: 32px 0 0 32px;
+    width: 50%;
+    margin: 0;
+    height: auto;
+    border-radius: 10px;
+    overflow: auto;
+    box-sizing: border-box;
+}
+
+.splitMainContainer {
+    margin: 20px auto;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.biographyBox{
+    padding: 4px;
+    margin: 0.5vw;
+    height: auto;
+    border-radius: 10px;
+    overflow: auto;
+    box-sizing: border-box;
+    border: solid 2px #888888;
+    box-shadow: 0px 2px 2px #888888;
+    justify-content: center;
+}
+
+.splitBiographyBox{
+    width: 50%;
+}
+.fullBiographyBox{
+    width: 100%;
+}
+
+.biographySectionHeader{
+    font-size: 1.25vw;
+    color: #007172;
+    display: flex;
+    justify-content: center;
+    margin-bottom: -2vw;
+    margin-top: -2vw;
+}
+
+.biographyParagraph{
+    width: 100%;
+    font-size: 1.4vw;
+    text-align: center;
 }
