--- a/semitec/src/app/_styles/CreateLesson.module.css
+++ b/semitec/src/app/_styles/CreateLesson.module.css
@@ -1,38 +1,85 @@
-.container {
-    min-height: 120vh;
-    width: 34.7vw;
-    border-radius: 50px;
-    background-color: #ebebeb;
-    padding-top: 2%;
-    padding-bottom: 1%;
-    text-align: center; 
-    margin: 10vh auto 10vh auto;
+.parent {
+    display: flex;
+    justify-content: center;
 }
 
-.wrapper {
-    margin: 0 12.8%;
+.container {
+    margin: 1vw 1vw 1vw 1vw;
+    width: 90%;
+    border-radius: 50px;
+    background-color: #ebebeb;
+    text-align: center;
+}
+
+.leftContainer, .midContainer, .rightContainer {
+    padding-bottom: 1vw;
+    width: 30%;
+    height: auto;
+    border-radius: 10px;
+    box-sizing: border-box;
+    justify-content: space-around;
 }
 
 .title {
     font-size: 2.7vw;
+    text-align: center;
+    display: inline-block;
 }
 
-.container label {
-    display: block;
-    margin-top: 1em;
-    margin-bottom: 0.5em;
+.sectionHeader{
+    font-size: 1.5vw;
+    font-weight: 100;
+    color: #555555;
+}
+
+.formsLabel{
+    font-size: 1.3vw;
+    color: #212529;
+    text-align: left;
 }
 
 .container input, select, textarea {
-    width: 100%;
+    width: 90%;
     font-size: 1.3vw;
     border-radius: 4px;
-    border: solid 1px #ebebeb;
-    padding: 0.3em;
+    border: solid 1px #CED4DA;
+    padding: 0.5em;
+    margin-top: 0.5vw;
+    margin-bottom: 1vw;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+.tooltip .tooltipText {
+    visibility: hidden;
+    width: 200px;
+    background-color: #ffffff;
+    border: solid 1px #CED4DA;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 1.0s;
+}
+
+.tooltip:hover .tooltipText {
+    visibility: visible;
+    opacity: 1;
 }
 
 .buttonContainer {
     margin: auto;
-    width: fit-content;
-    padding-top: 1em;
+    width: 50%;
+    padding: 1em;
+    display: flex;
+    justify-content: space-around;
 }
+
