--- a/semitec/src/app/_styles/NextLessonCard.module.css
+++ b/semitec/src/app/_styles/NextLessonCard.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ebebeb;
+    /*background-color: #ebebeb;*/
     border-radius: 25px;
     padding: 10px 30px;
     margin-top: 58px;
@@ -18,9 +18,6 @@
 
 .button {
     align-items: center;
-    background-color: #824C0F;
-    border: 0px;
-    color: white;
     padding: 1% 4%;
     font-size: 2.2vw;
     height: 4vw;
