--- a/semitec/src/app/components/NavBar.module.css
+++ b/semitec/src/app/components/NavBar.module.css
@@ -15,7 +15,7 @@
     display: flex;
     padding: 16px;
     align-items: center;
-    background-color: #007172;
+    /*background-color: #007172; */
 }
 
 .navMenu {
