--- a/semitec/src/app/globals.css
+++ b/semitec/src/app/globals.css
@@ -19,6 +19,9 @@
   --accesibility-bar-btn-color: white;
   --accesibility-bar-btn-border: 2px solid white;
   --accesibility-bar-border: 0px;
+
+  /* Card container */
+  --card-container-bg: #ebebeb;
 }
 [data-theme="Predeterminado"] {
   --background: white;
@@ -41,6 +44,8 @@
   --accesibility-bar-btn-color: #202020;
   --accesibility-bar-border: 2px solid #202020;
   --accesibility-bar-btn-border: 2px solid #202020;
+
+  --card-container-bg: #fffaef;
 }
 
 [data-theme="Ceniza"] {
@@ -59,6 +64,7 @@
   --accesibility-bar-btn-color: #b6f6f0;
   --accesibility-bar-border: 2px solid #b6f6f0;
   --accesibility-bar-btn-border: 2px solid #b6f6f0;
+  --card-container-bg: #2d3236;
 }
 
 [data-theme="Grafito"] {
@@ -77,6 +83,8 @@
   --accesibility-bar-btn-color: #ffffff;
   --accesibility-bar-border: 2px solid #ffffff;
   --accesibility-bar-btn-border: 2px solid #ffffff;
+
+  --card-container-bg: #202020;
 }
 
 [data-theme="Noche"] {
@@ -95,6 +103,8 @@
   --accesibility-bar-border: 2px solid #ffee32;
   --accesibility-bar-btn-color: #ffee32;
   --accesibility-bar-btn-border: 2px solid #ffee32;
+
+  --card-container-bg: #000000;
 }
 
 body {
@@ -159,4 +169,9 @@ menu {
 
 .accessibility-bar-btn-content {
   fill: var(--accesibility-bar-btn-color);
+}
+
+.card-container-theme {
+  background-color: var(--card-container-bg);
+  border: var(--button-border);
 }
