View Groups (Teacher) and create and assign activities (Teacher) finalized. Could use some debugging, but the methods are there.

--- a/semitec/src/app/_styles/Button.module.css
+++ b/semitec/src/app/_styles/Button.module.css
@@ -16,3 +16,11 @@
   font-size: 20px;
   border-radius: 4px;
 }
+
+/*Temporary change for visual aid on pagination*/
+.primary:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
