--- a/semitec/src/app/_styles/GroupsTable.module.css
+++ b/semitec/src/app/_styles/GroupsTable.module.css
@@ -1,6 +1,6 @@
 .container {
     overflow-x:auto;
-    max-height: 45vh;
+    max-height: 100%;
 }
 
 .container table {
@@ -27,11 +27,11 @@
     background-color: #f2f2f2;
 }
 
-.container button {
-    background-color: transparent;
-    color: #007172;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-
+.buttonContainer {
+    margin-top: 2vw;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
 }
