--- a/semitec/src/app/components/teacher-groups.module.css
+++ b/semitec/src/app/components/teacher-groups.module.css
@@ -1,7 +1,16 @@
-.rightContainer, .leftContainer {
-    padding: 32px 0 0 32px;
+.leftContainer {
+    padding: 32px 32px 0 32px;
     width: 46vw;
-    margin: auto;
+    margin: 1vw;
+    height: 76vh;
+    border-radius: 10px;
+    border: solid 1px #e6e6e6;
+}
+
+.rightContainer {
+    padding: 32px 32px 0 32px;
+    width: 46vw;
+    margin: 1vw;
     height: 76vh;
     border-radius: 10px;
     border: solid 1px #e6e6e6;
@@ -15,7 +24,7 @@
 }
 
 .groupListContainer {
-    max-height: 85%;
+    max-height: 75%;
     overflow-y: auto;
 }
 
@@ -39,10 +48,10 @@
 }
 
 .buttonContainer {
-    margin-top: 2vw;
+    margin-top: 0.5vw;
     width: 100%;
     display: flex;
     text-align: center;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-around;
 }
