--- a/semitec/src/app/components/profile-data.css
+++ b/semitec/src/app/components/profile-data.css
@@ -1,7 +1,7 @@
 .flex-container{
     display: block;
     width: 100%;
-    margin: 0 auto 15vh;
+    margin: 0 auto 2vh;
 }
 
 .data-container{
@@ -11,7 +11,7 @@
     padding: 15px 32px;
     text-align: left;
     font-size: 16px;
-    width: 25vw;
+    width: 60vh;
     border-radius: 25px;
     margin: 0 auto;
     padding-bottom: 2%;
