--- a/semitec/src/app/signup/Signup.css
+++ b/semitec/src/app/signup/Signup.css
@@ -43,8 +43,8 @@ body {
     height: 160px;
     flex-grow: 4;
     background-repeat: no-repeat;
-    margin-top: 30%;
-    margin-left: 11%;
+    margin-top: 25%;
+    margin-left: 25%;
 }
 
 .signup-header {
@@ -57,6 +57,7 @@ body {
     width: 100%;
     padding-bottom: 5%;
     padding-top: 5%;
+    margin-top: 0%;
 }
 
 .signup{
@@ -131,6 +132,12 @@ body {
       margin-bottom: 5%;
       margin-left: auto;
   }
+
+.doggo{
+    margin-left: auto;
+    margin-bottom: 0%;
+    margin-left: 70%;
+}
   
   .final-anchor-button:hover {
     background-color: #D94F04;
