--- a/semitec/src/app/components/LessonCard.module.css
+++ b/semitec/src/app/components/LessonCard.module.css
@@ -1,11 +1,14 @@
-.lessonCardContainer {
+.container {
     display: flex;
-    border-radius: 10px;
-    border: 1px solid #e6e6e6;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 25px;
+    padding: 10px 30px;
+    height: 11vh;
 }
 
 .itemInfo {
-    padding: 20px 10px 20px 20px;
+    padding: 10px 10px 20px 20px;
     width: 100%;
 }
 
