--- a/semitec/src/app/student/home/styles.module.css
+++ b/semitec/src/app/student/home/styles.module.css
@@ -5,6 +5,24 @@
     display: flex;
 }
 
+.container {
+    /*display: flex;*/
+    justify-content: space-between;
+    align-items: center;
+    /*background-color: #ebebeb;*/
+    border-radius: 25px;
+    padding: 10px 30px;
+}
+
+.halfScreenContainer {
+    padding: 0 20px;
+    padding-bottom: 20px;
+    width: 45vw;
+    border-radius: 10px;
+    align-items: center;
+    border: solid 0px #e6e6e6;
+  }
+
 .left_section {
     padding: 0 0 0 0;
     width: 46vw;
@@ -17,4 +35,15 @@
     width: 46vw;
     margin: auto;
     height: 76vh;
+}
+
+.cardWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+  }
+
+.headerText {
+    margin-top: 2vw;
+    margin-bottom: 0;
 }
