--- a/semitec/src/app/components/LessonCard.module.css
+++ b/semitec/src/app/components/LessonCard.module.css
@@ -1,3 +1,9 @@
+.lessonCardContainer {
+    display: flex;
+    border-radius: 10px;
+    border: 1px solid #e6e6e6;
+}
+
 .container {
     display: flex;
     justify-content: space-between;
