feat: adding create lesson button and navigation

--- a/semitec/src/app/components/LessonsScreen.module.css
+++ b/semitec/src/app/components/LessonsScreen.module.css
@@ -82,3 +82,9 @@
     align-items: flex-end;
     justify-content: space-around;
 }
+
+.flexContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
