--- a/semitec/src/app/components/lesson-stats.module.css
+++ b/semitec/src/app/components/lesson-stats.module.css
@@ -16,5 +16,35 @@
     border: solid 1px #CED4DA;
     padding: 0.5em;
     margin-top: 0.5vw;
-    margin-bottom: 1vw;
+}
+
+.radioContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+.radioContainer label {
+    margin-right: 10px;
+}
+
+.chartContainer {
+    margin-top: 5px;
+    max-height: 70vh;
+    width: 100%;
+    overflow: hidden;
+}
+  
+.highcharts-container {
+    width: 100% !important;
+    height: 100% !important;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.buttonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
 }
