--- a/semitec/src/app/components/NavBar.module.css
+++ b/semitec/src/app/components/NavBar.module.css
@@ -75,3 +75,26 @@
 .invertedIcon {
     transform: translateY(-50%) rotate(180deg); /* Invert the icon */
 }
+
+.options{
+    position: absolute;
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    right: 0;
+    padding-top: 1vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    background-color: var(--background);;
+    border-radius: 10px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.optionsText{
+    margin-bottom: 1vw;
+    margin-right: 1vw;
+}
+
+.optionsText:hover {
+    font-weight: 600;
+}
