--- a/semitec/src/app/_styles/Button.module.css
+++ b/semitec/src/app/_styles/Button.module.css
@@ -3,6 +3,7 @@
   font-size: 1.2vw;
   border-radius: 4px;
   min-height: 5vh;
+  cursor: pointer;
 }
 
 .secondary {
@@ -12,6 +13,7 @@
   padding: 10px 30px;
   font-size: 20px;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 /*Temporary change for visual aid on pagination*/
