--- a/semitec/src/app/components/AccessibilityBar.module.css
+++ b/semitec/src/app/components/AccessibilityBar.module.css
@@ -3,6 +3,7 @@
   justify-content: flex-end;
   align-items: center;
   height: 2.9vw;
+  background-color: var(--accesibility-bar-bg);
 }
 
 .bar button {
@@ -10,10 +11,11 @@
   font-weight: bold;
   width: 1.6vw;
   height: 74%;
-  margin-right: 5px;
+  margin-right: 0.5vw;
   padding: 0px;
   background-color: transparent;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 button img {
