--- a/semitec/src/app/globals.css
+++ b/semitec/src/app/globals.css
@@ -7,6 +7,11 @@
   --button-color: #824c0f;
   --button-text: white;
   --button-border: 0px;
+  --buttonAlt-color: transparent;
+  --buttonAlt-text: black;
+  --buttonAlt-border: 2px solid #F29325;
+  --buttonAlt-hover: #f292253c;
+  --buttonAlt-active: #f29225cc;
   --navbar-background: #007172;
   --navbar-border: 0px;
   --link-color: white;
@@ -31,9 +36,14 @@
   --background: #fffaef;
   --foreground: #3d3d3d;
   --link-color: #1C5E75;
-  --button-color: #fffaef;
-  --button-text: #202020;
+  --button-color: #202020;
+  --button-text: #fffaef;
   --button-border: 2px solid #202020;
+  --buttonAlt-color: transparent;
+  --buttonAlt-text: black;
+  --buttonAlt-border: 2px solid #202020;
+  --buttonAlt-hover: #2020203c;
+  --buttonAlt-active: #202020cc;
   --navbar-background: #fffaef;
   --navbar-border: 2px solid #202020;
   --logo-color: #202020;
@@ -51,9 +61,14 @@
   --background: #2D3236;
   --foreground: #ffffff;
   --link-color: #70EBDE;
-  --button-color: #2D3236;
-  --button-text: #B6F6F0;
+  --button-color: #B6F6F0;
+  --button-text: #2D3236;
   --button-border: 2px solid #B6F6F0;
+  --buttonAlt-color: transparent;
+  --buttonAlt-text: white;
+  --buttonAlt-border: 2px solid #B6F6F0;
+  --buttonAlt-hover: #ffffff2f;
+  --buttonAlt-active: #ffffff6f;
   --navbar-background: #2D3236;
   --navbar-border: 2px solid #B6F6F0;
   --logo-color: #B6F6F0;
@@ -75,6 +90,11 @@
   --button-color: #202020;
   --button-text: #ffffff;
   --button-border: 2px solid #ffffff;
+  --buttonAlt-color: transparent;
+  --buttonAlt-text: white;
+  --buttonAlt-border: 2px solid #B6F6F0;
+  --buttonAlt-hover: #ffffff2f;
+  --buttonAlt-active: #ffffff6f;
   --logo-color: #ffffff;
   --avatar-stroke: #ffffff;
 
@@ -94,6 +114,11 @@
   --button-color: black;
   --button-text: #ffee32;
   --button-border: 2px solid #ffee32;
+  --buttonAlt-color: transparent;
+  --buttonAlt-text: white;
+  --buttonAlt-border: 2px solid #ffee32;
+  --buttonAlt-hover: #ffffff2f;
+  --buttonAlt-active: #ffffff6f;
   --link-color: #8080ff;
   --logo-color: #ffee32;
   --avatar-stroke: #ffee32;
