--- a/semitec/src/app/_styles/CreateLesson.module.css
+++ b/semitec/src/app/_styles/CreateLesson.module.css
@@ -33,7 +33,7 @@
 
 .formsLabel{
     font-size: 1.3vw;
-    color: #212529;
+    color: var(--foreground);
     text-align: left;
 }
 
@@ -55,7 +55,7 @@
 .tooltip .tooltipText {
     visibility: hidden;
     width: 200px;
-    background-color: #ffffff;
+    background-color: var(--background);
     border: solid 1px #CED4DA;
     text-align: center;
     border-radius: 6px;
@@ -109,6 +109,7 @@
     min-height: 80%;
 }
 .buttnedText:focus {
+    color: black;
     outline: 2px solid #CED4DA;
 }
 .buttnedText:hover {
