--- a/semitec/src/app/_styles/JoinGroup.module.css
+++ b/semitec/src/app/_styles/JoinGroup.module.css
@@ -5,7 +5,7 @@
     background-color: #ebebeb;
     padding-top: 2%;
     text-align: center; 
-    margin: 10vh auto 10vh auto;
+    margin: 10vh auto 5vh auto;
 }
 
 .wrapper {
@@ -29,8 +29,27 @@
 
 .formContainer input {
     width: 100%;
-    font-size: 1.1vw;
+    font-size: 1.3vw;
     border-radius: 4px;
-    border: solid 1px #ebebeb;
-    padding: 0.3em;
+    border: solid 1px #CED4DA;
+    padding: 0.5em;
+    margin-top: 0.5vw;
+    margin-bottom: 1vw;
+}
+
+.code {
+    font-size: 3.3vw;
+}
+
+.sectionHeader{
+    font-size: 1.5vw;
+    font-weight: 100;
+    color: #555555;
+}
+
+.buttonContainer {
+    width: 100%;
+    padding-bottom: 2vh;
+    display: flex;
+    justify-content: space-around;
 }
