fixed unwanted movement
fixed unwanted card movement in student dashboard

--- a/semitec/src/app/student/home/styles.module.css
+++ b/semitec/src/app/student/home/styles.module.css
@@ -72,3 +72,9 @@
     display: flex;
     gap: 20px;
 }
+
+.container-center-contents{
+    margin-top: "5px"l;
+    height: 35vh;
+    align-content: "center";
+}
