--- a/semitec/src/app/_styles/Containers.module.css
+++ b/semitec/src/app/_styles/Containers.module.css
@@ -19,3 +19,12 @@
     width: 100%;
     text-align: right;
 }
+
+.buttonContainer {
+    margin-top: 0.5vw;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+}
