Added scroll to content inside lessons.

--- a/semitec/src/app/components/LessonsScreen.module.css
+++ b/semitec/src/app/components/LessonsScreen.module.css
@@ -7,8 +7,9 @@
 
 .halfScreenContainer {
   padding: 0 20px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   width: 45vw;
+  height: 70vh;
   border-radius: 10px;
   border: solid 1px #e6e6e6;
 }
@@ -63,8 +64,7 @@
 
 .lessonListContainer {
     flex-direction: column;
-    gap: 20px;
-    max-height: 85%;
+    max-height: 60%;
     overflow-y: auto;
 }
 
@@ -87,7 +87,7 @@
 }
 
 .buttonContainer {
-    margin-top: 2vw;
+    margin-top: 2vh;
     width: 100%;
     display: flex;
     text-align: center;
