--- a/semitec/src/app/components/LessonInfo.module.css
+++ b/semitec/src/app/components/LessonInfo.module.css
@@ -5,15 +5,21 @@
 }
 
 .buttonContainer {
-    margin-top: 4vw;
+    margin-top: 1vh;
     width: 100%;
     text-align: center;
 }
 
 .wrapper h2 {
+    margin: 0 0 0 0;
+    font-size: 3vw;
+}
+.wrapper h3 {
+    margin: 2.5vh 0 0 0;
     font-size: 1.5vw;
 }
-
 .wrapper p {
+    margin: 1.5vh 0 0 0;
     font-size: 1.3vw;
+    overflow-y: auto;
 }
