--- a/semitec/src/app/components/AccessibilityBar.module.css
+++ b/semitec/src/app/components/AccessibilityBar.module.css
@@ -17,7 +17,16 @@
   border-radius: 3px;
   cursor: pointer;
 }
-
+.sronly {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
 button img {
   vertical-align: middle;
   height: 100%;
