--- a/semitec/src/app/components/profile-data.css
+++ b/semitec/src/app/components/profile-data.css
@@ -1,3 +1,30 @@
+.card {
+    width: 18rem;
+    padding: .2rem;
+    text-align: center;
+    border-radius: .8rem;
+  }
+  
+  .card__skeleton {
+    background-image: linear-gradient(
+          90deg,
+          #ccc 0px,
+          rgb(229 229 229 / 90%) 40px,
+          #ccc 80px
+      );
+    background-size: 300%;
+    background-position: 100% 0;
+    border-radius: inherit;
+    animation: shimmer 1.5s infinite;
+  }
+  
+  .card__title {
+    height: 15px;
+  }
+  .card__address {
+    height: 25px;
+  }
+
 .flex-container{
     display: block;
     width: 100%;
@@ -19,6 +46,7 @@
 
 .header-format{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     padding-top: 15%;
     padding-bottom: 5%;
@@ -105,3 +133,9 @@
 .error{
     background-color: red;
 }
+
+@keyframes shimmer {
+    to {
+      background-position: -100% 0;
+    }
+  }
