--- a/semitec/src/app/_styles/Button.module.css
+++ b/semitec/src/app/_styles/Button.module.css
@@ -4,6 +4,15 @@
   border-radius: 4px;
   min-height: 5vh;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.primary:hover {
+  background-color: var(--button-hover);
+  color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.primary:active {
+  background-color: var(--button-active);
 }
 
 .primaryALT { 
@@ -41,5 +50,6 @@
   background-color: #ccc;
   color: #666;
   cursor: not-allowed;
+  border: 0;
   opacity: 0.6;
 }
