--- a/semitec/src/app/_styles/CreateLesson.module.css
+++ b/semitec/src/app/_styles/CreateLesson.module.css
@@ -37,7 +37,7 @@
     text-align: left;
 }
 
-.container input, select, textarea {
+.formsInput {
     width: 90%;
     font-size: 1.3vw;
     border-radius: 4px;
