--- a/semitec/src/app/components/NavBar.module.css
+++ b/semitec/src/app/components/NavBar.module.css
@@ -45,6 +45,7 @@
     padding: 1vw;
     background-color: var(--background);;
     border-radius: 10px;
+    border: 1px solid var(--foreground);   
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     flex-direction: column;
 }
@@ -70,6 +71,9 @@
     transform: translateY(-50%);
     left: 3.2em;
     transition: transform 0.3s;
+    vertical-align: middle;
+    height: 100%;
+    width: 100%;
 }
 
 .invertedIcon {
@@ -87,6 +91,7 @@
     padding-right: 1vw;
     background-color: var(--background);;
     border-radius: 10px;
+    border: 1px solid var(--foreground); 
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -98,3 +103,5 @@
 .optionsText:hover {
     font-weight: 600;
 }
+
+
