--- a/semitec/src/app/globals.css
+++ b/semitec/src/app/globals.css
@@ -4,14 +4,21 @@
   --text: black;
   --link: white;
   --selected-text: blue;
-  --button-color: #824c0f;
+
+  --button-color: #F29325; 
   --button-text: white;
-  --button-border: 0px;
+
+  --button-hover: #D94F04;
+  --button-active: #D94F04cc; 
+  
+
+  --button-border:  2px solid #F29325;
   --buttonAlt-color: transparent;
   --buttonAlt-text: black;
   --buttonAlt-border: 2px solid #F29325;
   --buttonAlt-hover: #f292253c;
   --buttonAlt-active: #f29225cc;
+
   --navbar-background: #007172;
   --navbar-border: 0px;
   --link-color: white;
@@ -26,6 +33,7 @@
 
   /* Card container */
   --card-container-bg: #ebebeb;
+
 }
 [data-theme="Predeterminado"] {
   --background: white;
